--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <!-- Graphic Design-->
      <section class="page-section bg-light" id="Graphic Design">
-        <div class="container">
+        <div class="container2">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Graphic Design</h2>
                 <h3 class="section-subheading text-muted"></h3>
@@ -154,7 +154,7 @@
 
         <!-- Motion Graphics Grid-->
         <section class="page-section bg-light" id="Motion Graphics">
-            <div class="container">
+            <div class="container3">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Motion Graphics</h2>
                     <h3 class="section-subheading text-muted"></h3>
